<resources>
    <string name="app_name">DPT lectures</string>
    <string name="action_settings">Settings</string>
    <string name="title">Subject\'s title</string>
    <string name="teacher">Teacher\'s name</string>
    <string name="about_app">About app</string>
    <string name="subject_is_saved">Subject is saved</string>
    <string name="theme_is_saved">Theme is saved</string>
    <string name="lecture">Lecture</string>
    <string name="save_lecture">Save</string>
    <string name="lectureIsDownloaded">Download Completed</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="Ok_button">OK</string>
    <string name="write_button">Write</string>
    <string name="download_error">Download Error</string>
    <string name="about_app_message">The KTP Lectures application is intended for access to lecture materials\n\nFor questions on the relevance of materials please contact teachers\n\nFor questions about the application, write to lin4rise@gmail.com</string>
    <string name="enter_subject">Enter subject…</string>
    <string name="search">Search</string>
    <string name="NoEmailApp">No app for e-mail</string>
    <string name="attention">Attention!</string>
    <string name="lectureWord">Lecture %1$s</string>
</resources>
