<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/saveLecture"
            android:icon="@drawable/ic_save_alt_24px"
            android:title="@string/save_lecture"
            app:showAsAction="ifRoom"
    />


    <item android:id="@+id/action_about_app"
          android:title="@string/about_app"
          android:orderInCategory="100"
          app:showAsAction="never"
    />


</menu>