<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      android:id = "@+id/subject_menu"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_about_app"
          android:title="@string/about_app"
          android:orderInCategory="100"
          app:showAsAction="never"/>

    <item
            android:id="@+id/app_bar_search"
            app:actionViewClass="android.widget.SearchView"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search"
            android:hint="@string/enter_subject"
            app:showAsAction="ifRoom" />

</menu>
