<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:id="@+id/linearTheme"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.ThemeActivity" tools:layout_editor_absoluteY="81dp" android:orientation="vertical">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" чтобы верхняя часть не прекрывала listView-->
    <ListView

            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/themeListView"/>
</LinearLayout>